name: pdb
version: 0.1
stability: alpha
synopsis: Read a Protein Databank file into a graph
category: Bioinformatics, Data Structures, Parsing, Text
license: BSD3
author: Badi' Abdul-Wahid
maintainer: abdulwahidc@gmail.com
build-type: Simple
cabal-version: >= 1.2


Library
    build-depends:
          base   >= 4.0
        , parsec >= 3.0.0
        , fgl    >= 5.4.0.0
    exposed-modules:
        PDB.Chemistry
        PDB.Format.ParserTools
        PDB.Format.Peano
        PDB.Format.Types
        PDB.Format.Instances
        PDB.Format.Sections.Header
        PDB.Format.Sections.Title
        PDB.Format.Sections.Seqres
        PDB.Format.Sections.Helix
